# Sudoku

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release-windows-exe.yml
src/sudoku_pdf/: __init__.py  __main__.py  cli.py  generator.py  models.py  pdf_renderer.py  service.py  solver.py  validation.py
tests/: test_cli.py  test_generator.py  test_pdf_renderer_orientation.py  test_validation.py
